
syntax = "proto3";

package net.mekstrike.common.unit;

option java_outer_classname = "CommonUnitProtos";
option java_package = "net.mekstrike.common.unit";
option go_package = "github.com/corstijank/mekstrike/src/common/go/unit";


message UnitStats {
  string name=1;
  string model=2;
  int32 pointvalue=3;
  string type=4;
  int32 size=5;
  string movement=6;
  string role=7;
  int32 shortdmg=8;
  int32 meddmg=9;
  int32 longdmg=10;
  int32 ovhdmg=11;
  int32 armor=12;
  int32 struct=13;
  repeated string specials=14;
  string image=15;
}
